# pypi-search-tui

./: README.md  setup.cfg
src/pypi_search_tui/: __main__.py  app.py
