[metadata]
name = pypi-search-tui
version = attr: pypi_search_tui.__version__
author = TomJGooding
description = Search Python packages from your terminal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomJGooding/pypi-search-tui
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
python_requires = >=3.8
package_dir =
    = src
packages = find:
install_requires =
    textual >= 0.56.4
    httpx
    beautifulsoup4
    types-beautifulsoup4

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pypi-search-tui = pypi_search_tui.app:run

[options.package_data]
pypi_search_tui = py.typed

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pytest
    pytest-cov
    textual-dev
